Created web sockets

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -171,41 +171,22 @@ h2{
 </div>
 
 
-<!---
-<button onclick="appointView()">Appointments view</button>
-<script>
-    function appointView() {
-        window.location.href = '/appointView';
-    }
-</script>
+  <div class="card">
+    <h3>CHATHUB</h3>
+    <div><img src="" width="80" class="img-thumbnail" ></div>
+    <br>
+    <div>  
+        <button class="btn" onclick="staffView()">CHAT</button>
 
+        
+        <script>
+            function staffView() {
+                window.location.href = '/admin';
+            }
+        </script>
 
-
-
-  <button onclick="appointAdd()">Appointments Add</button>
-  <script>
-      function appointAdd() {
-          window.location.href = '/add_appoint';
-      }
-  </script>
-
-
-
-<button onclick="usersView()">Users view</button>
-<script>
-    function usersView() {
-        window.location.href = '/patientView';
-    }
-</script>
-
-
-
-  <button onclick="uAdd()">Users Register</button>
-  <script>
-      function uAdd() {
-          window.location.href = '/signup';
-      }
-  </script>-->
+</div>
+</div>
 
 </body>
 </html>
