--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,11 +122,11 @@
                     <ul class="navbar-list">
                        <li class="navbar-item">
                             
-                        > </li>
+                         </li>
 
                         <li class="navbar-item">
                            
-                        > 
+                        
                     </li> 
                         <li class="navbar-item">
                            
@@ -188,6 +188,18 @@
                                 >
                             </a>
                         </li>
+
+                        <li id="chat" class="navbar-item">
+                           
+                            <button  onclick="chat()">ChatHUb</button>
+
+                       
+                            <script>
+                                function chat() {
+                                     window.location.href = '/user';
+                                                }
+                             </script>
+                    </li>
                     </ul>
                 </nav>
                 <button
