--- a/views/index.ejs
+++ b/views/index.ejs
@@ -239,7 +239,7 @@
                        
                             <script>
                                 function chat() {
-                                     window.location.href = '/user';
+                                    window.open('/user', '_blank');
                                                 }
                              </script>
 
