--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -62,7 +62,7 @@ h2{
 
     <div class="card">
         <h3>SERVICES</h3>
-        <div><img src="" width="80" class="img-thumbnail" ></div>
+        <div><img src="images/service.png" width="150" class="img-thumbnail" ></div>
         <br>
         <div>  
             <button class="btn" onclick="serviceView()">Service view</button>
@@ -89,7 +89,7 @@ h2{
 
 <div class="card">
     <h3>DOCTORS</h3>
-    <div><img src="" width="80" class="img-thumbnail" ></div>
+    <div><img src="images/doc.png" width="150"  class = "img-thumbnail" ></div>
     <br>
     <div>  
        
@@ -117,7 +117,7 @@ h2{
 
 <div class="card">
     <h3>ARTICLES</h3>
-    <div><img src="" width="80" class="img-thumbnail" ></div>
+    <div><img src="images/article.png" width="150" class="img-thumbnail" ></div>
     <br>
     <div>  
           
@@ -146,7 +146,7 @@ h2{
 
 <div class="card">
     <h3>STAFF</h3>
-    <div><img src="" width="80" class="img-thumbnail" ></div>
+    <div><img src="images/staff.png" width="150" class="img-thumbnail" ></div>
     <br>
     <div>  
         <button class="btn" onclick="staffView()">Staff view</button>
@@ -173,15 +173,15 @@ h2{
 
   <div class="card">
     <h3>CHATHUB</h3>
-    <div><img src="" width="80" class="img-thumbnail" ></div>
+    <div><img src="images/chat.png" width="150" class="img-thumbnail" ></div>
     <br>
     <div>  
-        <button class="btn" onclick="staffView()">CHAT</button>
-
+        <button class="btn" onclick="chatAdmin()">CHAT</button>
         
         <script>
-            function staffView() {
-                window.location.href = '/admin';
+            function chatAdmin() {
+                window.location.href = '/admin', '_blank';
+
             }
         </script>
 
