--- a/views/userDoctor.ejs
+++ b/views/userDoctor.ejs
@@ -15,10 +15,9 @@
                                         <h3><%= row.name %></h3>
                                         <div><img src="<%= row.image %>" width="80" class="img-thumbnail" ></div>
                                         <br>
-                                        <div>                                      <!-- Button to navigate to the second page -->
+                                        <div>                                    
                                             <button class="btn" onclick="navigateAppoint()">Make An Appointment</button>
                                     
-                                            <!-- Include a script to handle navigation -->
                                                 <script>
                                                     function navigateAppoint() {
                                                          window.location.href = '/add_appoint';
