--- a/views/layout/chatHeader.ejs
+++ b/views/layout/chatHeader.ejs
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a href="/dashboard" class="navbar-brand">
                 <i class="fa-solid fa-tooth">&nbsp DashBoard</i>
