Made some modifications to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -442,7 +442,12 @@
                         </div>
 
                         <div class="services_content">
-                            <img src="/images/doc2.jpg" alt="" />
+                            <button class="bt" id="myLink1" onclick="Docbutton2()"><img src="/images/doc2.jpg"></button>
+                            <script>
+                                function Docbutton2() {
+                                     window.location.href = '/userDoctor';
+                                                }
+                             </script>
 
                             <h3 class="services_title">Dr. Rohan Nashikkar</h3>
                             <p class="services_description">
@@ -455,7 +460,13 @@
                         </div>
 
                         <div class="services_content">
-                            <img src="/images/doc3.PNG" alt="" />
+                            <button class="bt" id="myLink2" onclick="Docbutton3()"><img src="/images/doc3.PNG"></button>
+                            <script>
+                                function Docbutton3() {
+                                     window.location.href = '/userDoctor';
+                                                }
+                             </script>
+                           
 
                             <h3 class="services_title">Dr. Pinal Jain</h3>
                             <p class="services_description">  
@@ -467,7 +478,14 @@
                         </div>
 
                         <div class="services_content">
-                            <img src="/images/doc4.jpg" alt="" />
+                            <button class="bt" id="myLink3" onclick="Docbutton4()"><img src="/images/doc4.jpg"></button>
+                            <script>
+                                function Docbutton4() {
+                                     window.location.href = '/userDoctor';
+                                                }
+                             </script>
+                           
+                           
 
                             <h3 class="services_title">Dr. Rahul Kumar</h3>
                             <p class="services_description">  
@@ -525,9 +543,12 @@
                                         While it's true that most people get
                                         braces during their teenage years,
                                         adults can also benefit from braces...
-
-                                        <a href="/html/blog.html" class="btn-text title-lg"
-                                            >Read More</a>
+                                            <button class="bt" id="Link1" onclick="art1()">Read More</button>
+                            <script>
+                                function art1() {
+                                     window.location.href = '/userBlog';
+                                                }
+                             </script>
                                     </p>
                                 </div>
                             </li>
@@ -567,10 +588,13 @@
                                         dental cleanings that serve different
                                         purposes. Regular scaling is...
                                     </p>
+                                    <button class="bt" id="Link1" onclick="art1()">Read More</button>
+                                    <script>
+                                        function art1() {
+                                             window.location.href = '/userBlog';
+                                                        }
+                                     </script>
 
-                                    <a href="/html/blog.html" class="btn-text title-lg"
-                                        >Read More</a
-                                    >
                                 </div>
                             </li>
 
@@ -609,10 +633,13 @@
                                         a protein that is important for normal
                                         brain development...
                                     </p>
+                                    <button class="bt" id="Link1" onclick="art1()">Read More</button>
+                                    <script>
+                                        function art1() {
+                                             window.location.href = '/userBlog';
+                                                        }
+                                     </script>
 
-                                    <a href="/html/doctor.html" class="btn-text title-lg"
-                                        >Read More</a
-                                    >
                                 </div>
                             </li>
                         </ul>
