Update index file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,7 +203,9 @@
                                                     }
                                  </script>
                         </li>
-                        
+
+                        <!-------nav bar----->
+
                         <li class="navbar-item"> 
 
                  <div class="dropdown">
@@ -215,6 +217,8 @@
                       <!-- Add more options as needed -->
                     </div>
                   </div>
+
+
                  
               </li>
                         <li
