--- a/views/add_appoint.ejs
+++ b/views/add_appoint.ejs
@@ -31,20 +31,20 @@
                         <div class="mb-3">
                             <label for="phone" name = "service">Select Service</label  class="form-control form-control-lg">
                             <select name="service" id="service" >
-                                <option value="service1">Tooth extraction</option>
-                                <option value="service2">Dental Cleanings and Check-ups</option>
-                                <option value="service3">Dental Fillings</option>
-                                <option value="service4">Teeth Whitening</option>
+                                <option value="Tooth extraction">Tooth extraction</option>
+                                <option value="Dental Cleanings and Check-ups">Dental Cleanings and Check-ups</option>
+                                <option value="Dental Fillings">Dental Fillings</option>
+                                <option value="Teeth Whitening">Teeth Whitening</option>
                               </select>
                         </div>
 
                         <div class="mb-3">
                             <label for="phone">Select Doctor</label  class="form-control form-control-lg">
                             <select name="doctor" id="" >
-                                <option value="doctor1">Dr. Prachi Deval</option>
-                                <option value="doctor2">Dr. Rohan Nashikkar</option>
-                                <option value="doctor3">Dr. Pinal Jain</option>
-                                <option value="doctor4">Dr. Rahul Kumar</option>
+                                <option value="Dr. Prachi Deval">Dr. Prachi Deval</option>
+                                <option value="Dr. Rohan Nashikkar">Dr. Rohan Nashikkar</option>
+                                <option value="Dr. Pinal Jain">Dr. Pinal Jain</option>
+                                <option value="Dr. Rahul Kumar">Dr. Rahul Kumar</option>
                               </select>
                         </div>
                         <div class="mb-3 d-grid">
