--- a/views/edit_blog.ejs
+++ b/views/edit_blog.ejs
@@ -17,7 +17,7 @@
 
                         <div class="mb-3">
                             <strong><label for="desc">Description:</label></strong>
-                            <textarea name="desc" class="form-control form-control-lg" cols="4" rows="6" placeholder="Description"  value="<%= blog.desc %>"></textarea>
+                            <input type="text" name="desc" class="form-control form-control-lg" cols="4" rows="6" placeholder="Description"  value="<%= blog.desc %>"  required />
                         </div>
 
 
