Made some modifications

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,6 +9,13 @@
 
 <style>
 
+    #chat {
+      position: absolute;
+      top: 75%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
 body{
   background-color: rgb(243, 249, 249) ;
 }
@@ -171,7 +178,7 @@ h2{
 </div>
 
 
-  <div class="card">
+  <div id="chat" class="card">
     <h3>CHATHUB</h3>
     <div><img src="images/chat.png" width="150" class="img-thumbnail" ></div>
     <br>
