--- a/views/userDoctor.ejs
+++ b/views/userDoctor.ejs
@@ -16,7 +16,7 @@
                                         <div><img src="<%= row.image %>" width="80" class="img-thumbnail" ></div>
                                         <br>
                                         <div>                                    
-                                            <button class="btn" onclick="navigateAppoint()">Make An Appointment</button>
+                                            <button class="btn" onclick="navigateAppoint()">Book an Doctor</button>
                                     
                                                 <script>
                                                     function navigateAppoint() {
