--- a/views/userService.ejs
+++ b/views/userService.ejs
@@ -19,7 +19,7 @@
             <div><img src="<%= row.image %>" width="80" class="img-thumbnail" ></div>
             <br>
             <div>                                   
-                <button class="btn" onclick="navigateAppoint()">Make An Appointment</button>
+                <button class="btn" onclick="navigateAppoint()">Book an Service</button>
         
                     <script>
                         function navigateAppoint() {
