--- a/views/add_services.ejs
+++ b/views/add_services.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-6 mx-auto mt-4">
             <div class="card shadow">
-                <div class="card-header bg-primary">
+                <div class="card-header bg-info">
                     <h3 class="text-light">Add New Services</h3>
                 </div>
                 <div class="card-body p-4 ">
@@ -26,7 +26,7 @@
                         </div>
                         
                         <div class="mb-3 d-grid">
-                            <input type="submit" name="submit" value="Add Service" class="btn btn-primary btn-lg" />
+                            <input type="submit" name="submit" value="Add Service" class="btn btn-info btn-lg" />
                         </div>
                     </form>
                 </div>
