--- a/views/appointView.ejs
+++ b/views/appointView.ejs
@@ -49,7 +49,7 @@
     
 
     <h2>APPOINTMENTS</h2>
-    <form id="doctorFilterForm" action="/" method="get" class="mb-3">
+    <form id="doctorFilterForm" action="/appointView" method="get" class="mb-3">
         <div class="input-group" style="background: rgb(255, 255, 255);">
             <select id="doctorSelect" class="form-select" name="doctor" aria-label="Filter by Doctor" 
                 style="border: 2px solid black; 
@@ -57,10 +57,10 @@
                        font-weight: bold;">
     
                 <option value=""><b>All Appointments</b></option>
-                <option value="doctor1">Dr. Prachi Deval</option>
-                <option value="doctor2">Dr. Rohan Nashikkar</option>
-                <option value="doctor3">Dr. Pinal Jain</option>
-                <option value="doctor4">Dr. Rahul Kumar</option>
+                <option value="Dr. Prachi Deval">Dr. Prachi Deval</option>
+                <option value="Dr. Rohan Nashikkar">Dr. Rohan Nashikkar</option>
+                <option value="Dr. Pinal Jain">Dr. Pinal Jain</option>
+                <option value="Dr. Rahul Kumar">Dr. Rahul Kumar</option>
 
             </select>
         </div>
