--- a/views/edit_appoint.ejs
+++ b/views/edit_appoint.ejs
@@ -34,19 +34,19 @@
                             <div class="mb-3">
                                 <label for="service">Service</label>
                                 <select name="service" id="service" required>
-                                    <option value="service1" <%= user.service === 'service1' ? 'selected' : '' %>>Tooth extraction</option>
-                                    <option value="service2" <%= user.service === 'service2' ? 'selected' : '' %>>Dental Cleanings and Check-ups</option>
-                                    <option value="service3" <%= user.service === 'service3' ? 'selected' : '' %>>Dental Fillings</option>
-                                    <option value="service4" <%= user.service === 'service4' ? 'selected' : '' %>>Teeth Whitening</option>
+                                    <option value="Tooth extraction" <%= user.service === 'Tooth extraction' ? 'selected' : '' %>>Tooth extraction</option>
+                                    <option value="Dental Cleanings and Check-ups" <%= user.service === 'Dental Cleanings and Check-ups' ? 'selected' : '' %>>Dental Cleanings and Check-ups</option>
+                                    <option value="Dental Fillings" <%= user.service === 'Dental Fillings' ? 'selected' : '' %>>Dental Fillings</option>
+                                    <option value="Teeth Whitening" <%= user.service === 'Teeth Whitening' ? 'selected' : '' %>>Teeth Whitening</option>
                                 </select>
                             </div>
                             <div class="mb-3">
                                 <label for="doctor">Select Doctor</label>
                                 <select name="doctor" id="doctor" required>
-                                    <option value="doctor1" <%= user.doctor === 'doctor1' ? 'selected' : '' %>>Dr. Prachi Deval</option>
-                                    <option value="doctor2" <%= user.doctor === 'doctor2' ? 'selected' : '' %>>Dr. Rohan Nashikkar</option>
-                                    <option value="doctor3" <%= user.doctor === 'doctor3' ? 'selected' : '' %>>Dr. Pinal Jain</option>
-                                    <option value="doctor4" <%= user.doctor === 'doctor4' ? 'selected' : '' %>>Dr. Rahul Kumar</option>
+                                    <option value="Dr. Prachi Deval" <%= user.doctor === 'Dr. Prachi Deval' ? 'selected' : '' %>>Dr. Prachi Deval</option>
+                                    <option value="Dr. Rohan Nashikkar" <%= user.doctor === 'Dr. Rohan Nashikkar' ? 'selected' : '' %>>Dr. Rohan Nashikkar</option>
+                                    <option value="Dr. Pinal Jain" <%= user.doctor === 'Dr. Pinal Jain' ? 'selected' : '' %>>Dr. Pinal Jain</option>
+                                    <option value="Dr. Rahul Kumar" <%= user.doctor === 'Dr. Rahul Kumar' ? 'selected' : '' %>>Dr. Rahul Kumar</option>
                                 </select>
                             </div>
                             
