--- a/views/edit_doctors.ejs
+++ b/views/edit_doctors.ejs
@@ -5,7 +5,7 @@
         <div class="col-lg-6 mx-auto mt-4">
             <div class="card shadow">
                 <div class="card-header bg-success">
-                    <h3 class="text-light">Edit Doctor (%= Doctor.name %)</h3>
+                    <h3 class="text-light">Edit Doctor = <%= doctor.name %> </h3>
                 </div>
                 <div class="card-body p-4">
                     <form action="/updateDoctor/<%= doctor._id %>" method="post" id="add-form" enctype="multipart/form-data">
