--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
         <!--- primary meta tags-->
 
-        <title>DentCare - home</title>
+        <title>DentCare</title>
         
         <!-- - favicon-->
 
