--- a/views/index.ejs
+++ b/views/index.ejs
@@ -349,7 +349,7 @@
                             ensuring your confidence and health shine.
                             <br>
                             Our dedicated team is committed to providing personalized care that goes 
-                            beyond mere treatment - it's about nurturing your overall well-being
+                            beyond treatment - it's about nurturing your overall well-being
                             </p>
 
                             <p class="tab-text" data-reveal="left">
