--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
         <!--- primary meta tags-->
 
-        <title>DentCare</title>
+        <title>DentCare - home</title>
         
         <!-- - favicon-->
 
@@ -349,7 +349,7 @@
                             ensuring your confidence and health shine.
                             <br>
                             Our dedicated team is committed to providing personalized care that goes 
-                            beyond treatment - it's about nurturing your overall well-being
+                            beyond mere treatment - it's about nurturing your overall well-being
                             </p>
 
                             <p class="tab-text" data-reveal="left">
