--- a/views/index.ejs
+++ b/views/index.ejs
@@ -348,7 +348,7 @@
                             we prioritize excellence in dental wellness, 
                             ensuring your confidence and health shine.
                             <br>
-                            Our dedicated team is committed to providing personalized care that goes 
+                            Our team is committed to providing personalized care that goes 
                             beyond mere treatment - it's about nurturing your overall well-being
                             </p>
 
